--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
@@ -55,71 +55,76 @@
         </div>
         <p class="lead mb-5">We are the young organization of smart, creative and interesting people. Every day we learn something new, create and improve ourselves. We also like to have fun together and play. And We make applications for people.</p>
         <div class="social-icons">
-          <a class="social-icon" href="https://github.com/mezidia" title="GitHub page" target="blank"><i class="fab fa-github"></i></a>
-          <a class="social-icon" href="https://t.me/sylvenis" title="Telegram profile" target="blank"><i class="fab fa-telegram"></i></a>
-          <a class="social-icon" href="https://www.facebook.com/profile.php?id=100005721694357" title="Facebook profile" target="blank"><i class="fab fa-facebook-f"></i></a>
+          <a class="social-icon" href="https://github.com/mezidia" title="GitHub organization page" target="blank"><i class="fab fa-github"></i></a>
+          <a class="social-icon" href="https://t.me/sylvenis" title="Maxim Telegram profile" target="blank"><i class="fab fa-telegram"></i></a>
+          <a class="social-icon" href="https://www.facebook.com/profile.php?id=100005721694357" title="Maxim Facebook profile" target="blank"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
     </section>
     <hr class="m-0" />
     <!-- Experience-->
-    <section class="resume-section" id="experience">
+    <section class="resume-section" id="projects">
       <div class="resume-section-content">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Projects</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between
             mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure
-              proactive domination. At the end of the day, going forward, a
-              new normal that has evolved from generation X is on the runway
-              heading towards a streamlined cloud solution. User generated
-              content in real-time will have multiple touchpoints for
-              offshoring.</p>
+            <a class="h3 mb-0" href="https://github.com/mezidia/flask-jobs" target="blank">flask-jobs</a>
+            <div class="subheading mb-3">Flask REST-API </div>
+            <p>Test project for creating REST-API with Flask.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">March 2013 -
+          <div class="flex-shrink-0"><span class="text-primary">August 2020 -
               Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between
             mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value
-              added activity to beta test. Override the digital divide with
-              additional clickthroughs from DevOps. Nanotechnology immersion
-              along the information highway will close the loop on focusing
-              solely on the bottom line.</p>
+            <a class="h3 mb-0" href="https://github.com/mezidia/hotel-booking" target="blank">hotel-booking</a>
+            <div class="subheading mb-3">C# project with databases</div>
+            <p>Educational project from the university.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">December 2011
-              - March 2013</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">September 2020
+              - December 2020</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between
             mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to
-              establish a framework. Taking seamless key performance
-              indicators offline to maximise the long tail. Keeping your eye
-              on the ball while performing a deep dive on the start-up
-              mentality to derive convergence on cross-platform integration.</p>
+            <a class="h3 mb-0" target="blank" href="https://github.com/mezidia/roadmap">roadmap</a>
+            <div class="subheading mb-3">Organization roadmap</div>
+            <p>In this repository, you can find the official Mezidia public product roadmap. Our product roadmap is where you can learn about what features we're working on, what stage they're in, and when we expect to bring them to you.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">July 2010 -
-              December 2011</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">December 2020 -
+              Present</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
+            <a class="h3 mb-0" href="https://github.com/mezidia/mezidia-jobs" target="blank">mezidia-jobs</a>
+            <div class="subheading mb-3">Portal where you can find job in Mezidia</div>
+            <p>Test project for creating REST-API with React-hooks.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">July 2020
+              - Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <a class="h3 mb-0" href="https://github.com/mezidia/Shortcut" target="blank">Shortcut</a>
+            <div class="subheading mb-3">Dushila's project</div>
             <p>Collaboratively administrate empowered markets via
               plug-and-play networks. Dynamically procrastinate B2C users
               after installed base benefits. Dramatically visualize customer
               directed convergence without revolutionary ROI.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">September 2008
-              - June 2010</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2021
+              - Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <a class="h3 mb-0" href="https://github.com/mezidia/grechka.com" target="blank">grechka.com</a>
+            <div class="subheading mb-3">Site on NodeJS</div>
+            <p>The goal of this project is to create a website that helps customers find the best prices for buckwheat.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2021
+              - Present</span></div>
         </div>
       </div>
     </section>
